udl/test/corpus/instance-variables.txt
==================
Instance Variables 0
==================

Class Foo {

ClassMethod Bar() {
  set ..Foo = 12
}

}

---

(source_file
  (class_definition
    (keyword_class)
    (class_name)
    (class_body
      (class_statement
        (classmethod
          (keyword_classmethod)
          (method_definition
            (method_name
              (identifier))
            (arguments)
            (statement
              (command_set
                (keyword_set)
                (set_argument
                  (oref_set_target
                    (relative_dot_property
                      (oref_property
                        (property_name
                          (identifier_segment_immediate)))))
                  (expression
                    (expr_atom
                      (numeric_literal))))))))))))
