udl/test/corpus/method-argument.txt
=====
Method Arguments - 0: Testing Output Argument Modifier
=====

/// Convert an HL7 message into SDA3 XML
Class HS.Gateway.HL7.HL7ToSDA3 Extends %RegisteredObject [ Not ProcedureBlock ]
{

Parameter HSDEPLOY = 1;

ClassMethod GetSDA(Output pXml, p as %String) {
  set d = 3
}

}

---

(source_file
  (documatic_line)
  (class_definition
    (keyword_class)
    (class_name)
    (class_extends
      (keyword_extends)
      (class_name))
    (class_keywords
      (class_keyword
        (class_keyword_procedure_block
          (keyword_not))))
    (class_body
      (class_statement
        (parameter
          (keyword_parameter)
          (parameter_name
            (identifier))
          (default_argument_value
            (numeric_literal))))
      (class_statement
        (classmethod
          (keyword_classmethod)
          (method_definition
            (method_name
              (identifier))
            (arguments
              (argument
                (keyword_output)
                (identifier))
              (argument
                (identifier)
                (return_type
                  (keyword_as)
                  (typename
                    (identifier)))))
            (statement
              (command_set
                (keyword_set)
                (set_argument
                  (glvn
                    (lvn
                      (objectscript_identifier)))
                  (expression
                    (expr_atom
                      (numeric_literal))))))))))))
